fix: adjust positioning of arrows in hero component for better alignment

--- a/src/app/landing-page/sections/a-hero/a-hero.component.scss
+++ b/src/app/landing-page/sections/a-hero/a-hero.component.scss
@@ -19,13 +19,13 @@
 
     .arrowLeft {
       position: absolute;
-      left: 0;
+      left: 2rem;
       bottom: 0;
     }
 
     .arrowRight {
       position: absolute;
-      right: 0;
+      right: 2rem;
       bottom: 0;
     }
 
